# zeus

./: .gitignore  README.md  pyproject.toml
src/zeus/: __init__.py  cli.py
src/zeus/core/: __init__.py  base.py  registry.py  writer.py
src/zeus/generators/: __init__.py  ecommerce_orders.py  example.py  patient_history.py  pharma_sales.py  support_tickets.py
src/zeus/ui/: app.py
tests/: test_framework.py  test_ui.py
