[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeus"
version = "0.1.0"
description = "Pluggable synthetic data generator for the Hermes MCP stack"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "faker>=24.0",
    "typer>=0.12",
]

[project.scripts]
zeus = "zeus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zeus"]
